fix: :lipstick: z-index -1 to menu when is closed

--- a/assets/css/layout/_hero.scss
+++ b/assets/css/layout/_hero.scss
@@ -61,6 +61,7 @@
   opacity: 0.9;
   position: fixed;
   inset: 0;
+  z-index: -1;
 }
 
 .menu__open .menu {
